force-app/main/default/objects/Composite_Document__c/Composite_Document__c.object-meta.xml
<CustomObject>
    <label>Composite Document</label>
    <pluralLabel>Composite Documents</pluralLabel>
    <nameField>
        <displayFormat>CD-{00000}</displayFormat>
        <label>Composite Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <description>Configuration for multi-source document generation using multiple templates with isolated namespaces.</description>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>