force-app/main/default/objects/Composite_Document__c/fields/Default_Output_Format__c.field-meta.xml
<CustomField>
    <fullName>Default_Output_Format__c</fullName>
    <description>Default output file format used when composite generation does not explicitly pass an output format.</description>
    <label>Default Output Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
                <default>true</default>
                <label>PDF</label>
            </value>
            <value>
                <fullName>DOCX</fullName>
            </value>
            <value>
                <fullName>PPTX</fullName>
            </value>
            <value>
                <fullName>XLSX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>