force-app/main/default/objects/Composite_Document__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this composite document configuration is active and available for use.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>