force-app/main/default/objects/Composite_Document__c/fields/Output_File_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Output_File_Name_Field__c</fullName>
    <description>Dot-delimited path in composite envelope data to use as the output file name. For composites with multiple namespaces, use a namespace-qualified path such as Quote.Conga_Offer_FileName__c. If blank or unresolved, Docgen uses the default timestamp file name.</description>
    <label>Output File Name Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>