force-app/main/default/objects/Composite_Document__c/fields/PrimaryParent__c.field-meta.xml
<CustomField>
    <fullName>PrimaryParent__c</fullName>
    <description>Default parent object for ContentDocumentLink creation. Supports standard and custom objects.</description>
    <label>Primary Parent Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>