force-app/main/default/objects/Composite_Document__c/fields/ReturnDocxToBrowser__c.field-meta.xml
<CustomField>
    <fullName>ReturnDocxToBrowser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Return the merged DOCX file to the browser in addition to or instead of PDF for interactive generation.</description>
    <label>Return DOCX to Browser</label>
    <type>Checkbox</type>
</CustomField>