force-app/main/default/objects/Composite_Document__c/fields/StoreMergedDocx__c.field-meta.xml
<CustomField>
    <fullName>StoreMergedDocx__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Store the merged DOCX file in Salesforce Files in addition to the PDF output.</description>
    <label>Store Merged DOCX</label>
    <type>Checkbox</type>
</CustomField>