force-app/main/default/objects/Composite_Document__c/fields/Template_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Template_Strategy__c</fullName>
    <description>Strategy for combining multiple data sources: Own Template (single master template) or Concatenate Templates (merge and concatenate individual templates).</description>
    <label>Template Strategy</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Own Template</fullName>
            </value>
            <value>
                <fullName>Concatenate Templates</fullName>
                <default>true</default>
                <label>Concatenate Templates</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>