force-app/main/default/objects/Composite_Document__c/fields/TemplateContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>TemplateContentVersionId__c</fullName>
    <description>ContentVersionId of the master template file. Guided creation uses TBD for a deferred Own Template upload; Concatenate Templates must remain blank.</description>
    <label>Template ContentVersion ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>