force-app/main/default/objects/Composite_Document__c/fields/Watermark_Condition_Field__c.field-meta.xml
<CustomField>
    <fullName>Watermark_Condition_Field__c</fullName>
    <description>Optional data field path that controls whether Watermark Text is applied. For composites with multiple namespaces, use a namespace-qualified path such as Quote.Status__c.</description>
    <label>Watermark Condition Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>