force-app/main/default/objects/Composite_Document__c/validationRules/Template_Required_For_Own_Strategy.validationRule-meta.xml
<ValidationRule>
    <fullName>Template_Required_For_Own_Strategy</fullName>
    <active>false</active>
    <description>When Template Strategy is 'Own Template', the TemplateContentVersionId field must be populated.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Template_Strategy__c, &quot;Own Template&quot;),
    ISBLANK(TemplateContentVersionId__c)
)</errorConditionFormula>
    <errorDisplayField>TemplateContentVersionId__c</errorDisplayField>
    <errorMessage>Template ContentVersion ID is required when strategy is 'Own Template'.</errorMessage>
</ValidationRule>