force-app/main/default/objects/Composite_Document__c/listViews/Active_Composite_Documents.listView-meta.xml
<ListView>
    <fullName>Active_Composite_Documents</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Template_Strategy__c</columns>
    <columns>PrimaryParent__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Composite Documents</label>
</ListView>