force-app/main/default/objects/Composite_Document__c/listViews/All_Composite_Documents.listView-meta.xml
<ListView>
    <fullName>All_Composite_Documents</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Template_Strategy__c</columns>
    <columns>PrimaryParent__c</columns>
    <columns>IsActive__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Composite Documents</label>
</ListView>