force-app/main/default/objects/Composite_Document__c/listViews/Recently_Viewed_Composite_Documents.listView-meta.xml
<ListView>
    <fullName>Recently_Viewed_Composite_Documents</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Template_Strategy__c</columns>
    <columns>PrimaryParent__c</columns>
    <columns>IsActive__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Composite Documents</label>
</ListView>